@@ -1,5 +1,11 @@
 $Id$
 
+2009-09-11 David Heremans <david.heremans@gnu-linux.net>
+	* Made the memoryviewer always start at an offset of "horBytes".
+	* Introduced the backgroundmarker to indicate the selected address.
+	* Fixed an asyncronisation problem which made the scrollbalk cycle
+	  between previous values.
+
 2009-09-10 David Heremans <david.heremans@gnu-linux.net>
 	* You can now select the cpu register to follow.
 
